# A4FC-Bot

./: Cargo.toml  config.json
src/: main.rs
