[package]
name = "fcbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dotenv = "0.15.0"
async-trait = "0.1.56"
tokio = { version = "1.20.1", features = [ "macros", "rt-multi-thread" ] }
rand = "0.8.5"
dashmap = "5.3.4"
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"
